--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -160,7 +160,7 @@
       
 
       
-      <% if @items = nil %>
+      <% if Item.count == 0 %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
