--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -38,7 +38,7 @@
     
 
     <div class="item-explain-box">
-      <span><%= @item.title %></span>
+      <span><%= @item.content %></span>
     </div>
     <table class="detail-table">
       <tbody>
