--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,7 +22,7 @@
       </span>
     </div>
 
-    
+    <% #売却済みの場合は3つとも表示されてはいけない %>
     <% if user_signed_in? && current_user.id == @item.user_id %>
     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
@@ -32,7 +32,7 @@
     <% if user_signed_in? && current_user.id != @item.user_id %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
     <% end %>
-    
+    <% #売却済みの場合は3つとも表示されてはいけない %>
 
 
     
