--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
     <% end %>
     
     <% if user_signed_in? && current_user.id != @item.user_id %>
-    <%= link_to "購入画面に進む", orders_path(@item.id),class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", item_orders_path(@item.id),class:"item-red-btn"%>
     <% end %>
     <% #売却済みの場合は3つとも表示されてはいけない %>
 
